--- a/ProveedoresFIME/ProveedoresFIME/Resources/layout/proveedores_main.axml
+++ b/ProveedoresFIME/ProveedoresFIME/Resources/layout/proveedores_main.axml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-	android:id="@+id/proveedores_main">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    
+	<android.support.design.widget.CoordinatorLayout   
+         android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+		android:id="@+id/proveedores_main"
+		android:layout_below="@id/toolbar">
 	<ListView  
 		android:minWidth="25px"    
 		android:minHeight="25px"    
@@ -18,4 +24,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add_black" />
-</android.support.design.widget.CoordinatorLayout>
+	</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
