--- a/ProveedoresFIME/ProveedoresFIME/Resources/layout/proveedores_add.axml
+++ b/ProveedoresFIME/ProveedoresFIME/Resources/layout/proveedores_add.axml
@@ -62,6 +62,7 @@
 			android:layout_height="wrap_content"
 			android:id="@+id/button1" 
 			android:layout_marginLeft="20dp"
-			android:layout_marginRight="30dp"/>
+			android:layout_marginRight="30dp"
+			android:layout_marginTop="10.0dp" />
 	</LinearLayout>	
 </RelativeLayout>
