--- a/ProveedoresFIME/ProveedoresFIME/Resources/layout/content_main.axml
+++ b/ProveedoresFIME/ProveedoresFIME/Resources/layout/content_main.axml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="" />
-
-</RelativeLayout>
+	<android.support.v7.widget.RecyclerView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:id="@+id/cotizaciones" />
+</LinearLayout>
